Conditionally scroll window on contact page only if its larger than 770px to fix contact page bug on smaller screens.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -66,6 +66,10 @@ footer {
 }
 
 @media screen and (max-width: 520px) {
+    footer {
+        padding: 5% 3% 5%; 
+    }
+
     #footer-logo {
         width: 25vw;
         margin-top: 10%;
