--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -565,6 +565,10 @@
         margin: 10% 0 5%;
     }
 
+        #testimonials-h2 {
+            margin-left: 3%;
+        }
+
     #testimonials-container {
         margin: 5% 3%;
     }
